[package]
name = "llm_wasm"
version = "0.1.0"
authors = ["rcanfield <Rcanfield86@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
llama_cpp_rs = "0.3.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.2", optional = true }


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
