[package]
name = "wingman_desktop"
version = "0.1.0"
description = "Wingman desktop companion"
authors = ["Wingman AI"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2.2.1"
tauri-plugin-notification = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.2"
